--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ rvm: 2.0.0
 before_script:
   - bundle exec rake db:create db:migrate db:test:prepare
 script: bundle exec rspec spec/
+services:
+  - redis-server
